--- a/src/main/resources/user.jrxml
+++ b/src/main/resources/user.jrxml
@@ -71,11 +71,11 @@
         <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="61b22074-d5d8-458c-afdc-c0c9c7d5462e"/>
     </element>
     <element kind="staticText" uuid="34ae9e80-fb9e-4a9b-bacf-bb2cbb2d7760" x="360" y="2" width="140" height="18" forecolor="#000000" bold="true" hTextAlign="Center" style="Column header">
-        <text><![CDATA[Address]]></text>
+        <text><![CDATA[Phone]]></text>
         <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c4554ac2-6940-4daf-95ff-0ff946fa71d0"/>
     </element>
     <element kind="staticText" uuid="c36385d0-97be-4d45-ab35-aa5c4468f24e" x="500" y="2" width="86" height="18" forecolor="#000000" bold="true" hTextAlign="Center" style="Column header">
-        <text><![CDATA[Phone]]></text>
+        <text><![CDATA[Address]]></text>
         <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="461845ae-8709-4300-a2bf-e8a328fc6be6"/>
     </element>
     <element kind="staticText" uuid="eef60314-b7a6-4241-9c2d-151c0373cd8a" x="277" y="2" width="83" height="18" forecolor="#000000" bold="true" hTextAlign="Center" style="Column header">
@@ -90,10 +90,10 @@
         <text><![CDATA[Non-Locked]]></text>
         <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="461845ae-8709-4300-a2bf-e8a328fc6be6"/>
     </element>
-<!--    <element kind="staticText" uuid="1868db34-c224-4031-ad07-2da01d583876" x="720" y="3" width="81" height="18" forecolor="#000000" bold="true" hTextAlign="Center" style="Column header">-->
-<!--        <text><![CDATA[Role]]></text>-->
-<!--        <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="461845ae-8709-4300-a2bf-e8a328fc6be6"/>-->
-<!--    </element>-->
+    <element kind="staticText" uuid="1868db34-c224-4031-ad07-2da01d583876" x="720" y="3" width="81" height="18" forecolor="#000000" bold="true" hTextAlign="Center" style="Column header">
+        <text><![CDATA[Role]]></text>
+        <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="461845ae-8709-4300-a2bf-e8a328fc6be6"/>
+    </element>
 </columnHeader>
 <detail>
     <band height="18" splitType="Stretch">
