--- a/src/main/resources/user.jrxml
+++ b/src/main/resources/user.jrxml
@@ -90,7 +90,7 @@
         <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="461845ae-8709-4300-a2bf-e8a328fc6be6"/>
     </element>
     <element kind="staticText" uuid="1868db34-c224-4031-ad07-2da01d583876" x="720" y="3" width="81" height="18" forecolor="#000000" bold="true" hTextAlign="Center" style="Column header">
-        <text><![CDATA[Role]]></text>
+        <text><![CDATA[Other]]></text>
         <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="461845ae-8709-4300-a2bf-e8a328fc6be6"/>
     </element>
 </columnHeader>
